# gh-docs-index

./: README.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: build-gh-index.yml
latest/: github-docs.json  github-lunr-index.json
scripts/: build_github_index.py  build_lunr_index.mjs
